Configuring add-opens